--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^2.1.1",
     "redux": "^2.0.0",
     "redux-thunk": "^0.1.0",
+    "store": "^1.3.17",
     "style-loader": "^0.12.3",
     "ws": "^0.8.0"
   }
